WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152977
REGRESSION(
r190717
): [GTK] Popup menus stop working after being dismissed without selecting an item
https://bugs.webkit.org/show_bug.cgi?id=152977
Summary
REGRESSION(r190717): [GTK] Popup menus stop working after being dismissed wit...
Carlos Garcia Campos
Reported
2016-01-11 10:01:28 PST
This happens after
r190717
when you open a popup menu and without selecting any option it's dismissed (press ESC or click somewhere else). This is because I removed the code to track when the menu is unmapped, thinking that it was no longer necessary. But we need to send the DidChangeSelectedIndexForActivePopupMenu to the WebProcess with -1 as index to keep the web process in sync.
Attachments
Patch
(6.08 KB, patch)
2016-01-11 10:03 PST
,
Carlos Garcia Campos
mcatanzaro
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2016-01-11 10:03:53 PST
Created
attachment 268693
[details]
Patch
Carlos Garcia Campos
Comment 2
2016-01-11 23:16:26 PST
Committed
r194886
: <
http://trac.webkit.org/changeset/194886
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug