REGRESSION(r190717): [GTK] Popup menus stop working after being dismissed without selecting an item https://bugs.webkit.org/show_bug.cgi?id=152977

Reviewed by Michael Catanzaro.

This happens since r190717 when you open a popup menu and without
selecting any option it's dismissed (press ESC or click somewhere
else). This is because I removed the code to track when the menu
is unmapped, thinking that it was no longer necessary. But we need
to send the DidChangeSelectedIndexForActivePopupMenu to the
WebProcess with -1 as index to keep the web process in sync.

* UIProcess/gtk/WebPopupMenuProxyGtk.cpp:
(WebKit::WebPopupMenuProxyGtk::WebPopupMenuProxyGtk):
(WebKit::WebPopupMenuProxyGtk::showPopupMenu):
(WebKit::WebPopupMenuProxyGtk::cancelTracking):
(WebKit::WebPopupMenuProxyGtk::menuItemActivated):
(WebKit::WebPopupMenuProxyGtk::dismissMenuTimerFired):
(WebKit::WebPopupMenuProxyGtk::menuUnmappedCallback):
* UIProcess/gtk/WebPopupMenuProxyGtk.h:

Canonical link: https://commits.webkit.org/171090@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194886 268f45cc-cd09-0410-ab3c-d52691b4dbfc